adapter/resources/k8s-artifacts/sample-api/sample-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-http-route-http-bin-api
spec:
  hostnames:
  - prod.gw.wso2.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: Default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /http-bin-api/1.0.8/get/
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /get
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sand-http-route-http-bin-api
spec:
  hostnames:
  - sand.gw.wso2.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: Default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /http-bin-api/1.0.8/get
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /get
